syntax = "proto3";

package pb;

option go_package = "./pkg/pb";

import "google/protobuf/timestamp.proto";
import "model/delivery.proto";

message DeliveryResponse {
    string id = 1;
    google.protobuf.Timestamp start_date = 2;
    google.protobuf.Timestamp end_date = 3;
    Product product = 4;
    Address address = 5;
    google.protobuf.Timestamp created_at = 6;
    google.protobuf.Timestamp updated_at = 7;
    string deliveryman_id = 8;
}
