syntax = "proto3";

package pb;

option go_package = "./pkg/pb";

import "request/delivery_request.proto";
import "response/delivery_response.proto";

service DeliveryService {
    rpc Save (DeliveryRequest) returns (DeliveryResponse);
}